--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,3 +1,16 @@
-{{!-- added 'test' placeholder to have a visual for rendering the dashboard --}}
+{{!-- dashboard.handlebars --}}
+
 <h1>test</h1>
+<nav>
+    {{!-- will show logout if user is logged in -tb --}}
+    {{#if logged_in}}
+        <button class="no-button" id="logout">Logout</button>
+    {{else}}
+        <a href="/login">Login</a>
+        {{!-- still needs to be fixed on front end. Logout button doesnt work - tb--}}
+        <script src="/js/logout.js"></script> 
+    {{/if}}
+</nav>
+
 <script src="/js/login.js"></script>
+
