Added logout button to render on dashbaord page if user is logged in. Button does not work, however, and needs to be fixed on front end. Fixed syntax on dashboard route that wasnt saving session when logged in

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,5 +1,5 @@
 <div class="d-flex justify-content-center flex-column">
-    <img src="/images/logo.png" alt="Logo" class="logo mb-5" />
+    <img id="logo" src="/images/logo.png" alt="Logo" class="logo mb-5" />
     <div class="d-flex flex-column justify-content-center align-items-center">
         <div id="buttonsContainer" class="d-flex justify-content-center text-center mb-5">
             <button id="showLogin" class="btn btn-primary m-2">Login</button>
